--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "yahoo-identity-api"]
 	path = yahoo-identity-api
 	url = git@github.com:yikulju/yahoo-identity-api.git
+[submodule "Vaike"]
+	path = Vaike
+	url = git@github.com:yikulju/Vaike.git
